--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,8 @@
 .App {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
