--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   position: relative;
   text-align: center;
+  font-family: 'Hammersmith One', sans-serif;
+  background-color: #F0F0F0 ;
+  border: 1px solid red;
+  overflow-x: hidden;
 }
 
 .App-header {
