--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,27 @@
 .App {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  text-align: center;
-  font-family: 'Hammersmith One', sans-serif;
-  background-color: #F0F0F0 ;
-  border: 1px solid red;
-  overflow-x: hidden;
+width: 100%;
+height: 100%;
+position: relative;
+text-align: center;
+font-family: 'Hammersmith One', sans-serif;
+background-color: #F0F0F0;
+overflow-x: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.overlay {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    opacity: 0.5;
+    background-color: #696969
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display {
+    display: block;
 }
