--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
 width: 100%;
-height: 100%;
+height: ;
 position: relative;
 text-align: center;
+overflow: hidden;
 font-family: 'Hammersmith One', sans-serif;
 background-color: #F0F0F0;
-overflow-x: hidden;
 }
 
 .overlay {
