--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
+html, body, #root {
+width: 100%;
+height: 100%;
+margin: 0;
+}
 .App {
 width: 100%;
-height: ;
-position: relative;
+height: 100%;
 text-align: center;
-overflow: hidden;
 font-family: 'Hammersmith One', sans-serif;
 background-color: #F0F0F0;
+overflow-x: hidden;
 }
-
 .overlay {
     display: none; 
     position: fixed; 
-    z-index: 1; 
+    z-index: 0; 
     padding-top: 100px;
     left: 0;
     top: 0;
